# Desafio-API

./: .gitignore  API_DOCUMENTATION.md  ARQUITETURA_E_DECISOES_TECNICAS.md  DOCUMENTACAO DA API.md  Dockerfile  README.md  docker-compose.yml  documento_teste.txt  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: database.py  models.py
backend/routers/: auth.py  documentos.py
backend/schemas/: __init__.py  documento.py  usuario.py
backend/services/: servico_autenticacao.py  servico_documento.py  servico_usuario.py
backend/utils/: autenticacao.py
